# myWebsite

./: .gitattributes  .gitignore  CNAME  Gemfile  README.md  _config.yml  ads.txt  index copy.md  index.md  privacy.html  robots.txt  sitemap.xml
_layouts/: default copy.html  default.html
farshid/: 404.html  Resources.md  Social.md  TOC.md
farshid/content/: 3D.md  Avatar.md  CPP_Memory.md  CUDA_numba_jit_tutorial.md  CUDA_pycuda_kernel_explanation.md  MLX_CoreML_Metal_.md  MYTopLinkeInPost2024.md  Mind_Map_Advanced_LLM_Concepts.md  Mind_Map_Orchestrating_Agents.md  Optimization.md  Prompts.md  Python.md  RealTimeMultiCamera.md  SEO.md  StartUp.md  VSCodeCUDAwindows.md  coaching.md  interview.md  links.md  opticalFlow.md  pyrun2.py  pyrunf.py  setup.md  theMissingSemester.md
farshid/guides/AI_CV_Python/: cProfiling_Benchmarking.py  line_profiler_Benchmarking.py  opimization_threading.py  optimization_cache.py
farshid/guides/CUDA/: c_cpp_properties.json  launch.json  setting.json  setup_cuda_opencv_vscode_win.md  tasks.json
farshid/guides/GitHubAction/: CMakeLists.txt
farshid/guides/GitHubAction/src/: main.cu
farshid/guides/LLM/: mlx-llm.ipynb
farshid/guides/src/: MLX_CoreML_Metal_.ipynb  ui.py
farshid/mindmaps/: CUDA_numba_jit_tutorial.md  CUDA_pycuda_kernel_explanation.md  Mind_Map_Advanced_LLM_Concepts.md  Mind_Map_Orchestrating_Agents.md
farshid/portfolio/projects/: AI_Model_Cost_Calculator.html  Solutions.md
farshid/portfolio/projects/AI_helper/: textAI.py  (+1 more)
farshid/portfolio/publications/: CV.md  Lessons from 10 years fixing bugs.md
(+65 files in other folders)
